--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Solid State by HTML5 UP
 	html5up.net | @ajlkn
@@ -6,178 +6,259 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-FZT29MQ6V6"></script>
+		<script>
+				window.dataLayer = window.dataLayer || [];
+				function gtag(){dataLayer.push(arguments);}
+				gtag('js', new Date());
+
+				gtag('config', 'G-FZT29MQ6V6');
+		</script>
+		<title>Gordan Liu</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, user-scalable=no"
+		/>
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<!-- Google tag (gtag.js) -->
+		
+		<noscript
+			><link rel="stylesheet" href="assets/css/noscript.css"
+		/></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+		<div id="page-wrapper">
+			<!-- Header -->
+			<header id="header" class="alt">
+				<nav>
+					<a href="#menu"></a>
+				</nav>
+			</header>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+			<!-- Menu -->
+			<nav id="menu">
+				<div class="inner">
+					<h2>Menu</h2>
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
+					</ul>
+					<a href="#" class="close">Close</a>
+				</div>
+			</nav>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
+			<!-- Banner -->
+			<section id="banner">
+				<div class="inner">
+					<h1>Gordan Liu</h1>
+					<p>Student at UMass Amherst | SWE Fellow at <a href="https://www.linkedin.com/company/headstarterai/">Headstarter AI</a></p>
+				</div>
+			</section>
+
+			<!-- Wrapper -->
+			<section id="wrapper">
+				<!-- One -->
+				<section id="one" class="wrapper spotlight style1">
+					<div class="inner">
+						<a href="#" class="image"
+							><img src="images/portrait.jpg" alt=""
+						/></a>
+						<div class="content">
+							<h2 class="major">About Me</h2>
+							<p>
+								Hello, my name is Gordan Liu and I am a second-year student
+								at the University of Massachusetts Amherst majoring in 
+								Computer Science. In my free time, I like to play video 
+								games, hang out with friends, and learn random skills. I hope
+								to become a proficient software engineer through improving my
+								own skillset while also incorporating newly developed AI tools
+								to help me succeed.
+							</p>
+							<a href="/GordanLiu.pdf" class="special">Resume</a>
 						</div>
-					</nav>
+					</div>
+				</section>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Gordan Liu</h2>
-							<p>Student at UMass Amherst | Aspiring Software Engineer</p>
+				<!-- Two -->
+				<section id="two" class="wrapper alt spotlight style2">
+					<div class="inner">
+						<a href="#" class="image"
+							><img src="images/afh_logo.jpg" alt=""
+						/></a>
+						<div class="content">
+							<h2 class="major">Creative Programmer</h2>
+							<p>
+								Worked at <a href="https://www.afhboston.org/">Artists For Humanity</a>
+								from 2021 to 2023 under the assistance of a mentor. Collaborated independently
+								and in teams (3-4 members) to develop and set up websites, games, and other
+								prototypes for company clients. Notable projects include several HTML5 mini-games
+								created using Javascript and Phaser.js, and a console-based version of the
+								popular word game, <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a>, written in Java.
+							</p>
+							<a href="https://github.com/gordanliu" class="special">GitHub</a>
 						</div>
-					</section>
+					</div>
+				</section>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
-								</div>
-							</section>
-
-					</section>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
+				<!-- Three -->
+				<section id="three" class="wrapper spotlight style3">
+					<div class="inner">
+						<a href="#" class="image"
+							><img src="images/pic03.jpg" alt=""
+						/></a>
+						<div class="content">
+							<h2 class="major">Nullam dignissim</h2>
+							<p>
+								
+							</p>
+							<a href="#" class="special">Learn more</a>
 						</div>
-					</section>
+					</div>
+				</section>
 
-			</div>
+				<!-- Four -->
+				<section id="four" class="wrapper alt style1">
+					<div class="inner">
+						<h2 class="major">Vitae phasellus</h2>
+						<p>
+							Cras mattis ante fermentum, malesuada neque vitae,
+							eleifend erat. Phasellus non pulvinar erat. Fusce
+							tincidunt, nisl eget mattis egestas, purus ipsum
+							consequat orci, sit amet lobortis lorem lacus in
+							tellus. Sed ac elementum arcu. Quisque placerat
+							auctor laoreet.
+						</p>
+						<section class="features">
+							<article>
+								<a href="#" class="image"
+									><img src="images/pic04.jpg" alt=""
+								/></a>
+								<h3 class="major">Sed feugiat lorem</h3>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur
+									adipiscing vehicula id nulla dignissim
+									dapibus ultrices.
+								</p>
+								<a href="#" class="special">Learn more</a>
+							</article>
+							<article>
+								<a href="#" class="image"
+									><img src="images/pic05.jpg" alt=""
+								/></a>
+								<h3 class="major">Nisl placerat</h3>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur
+									adipiscing vehicula id nulla dignissim
+									dapibus ultrices.
+								</p>
+								<a href="#" class="special">Learn more</a>
+							</article>
+							<article>
+								<a href="#" class="image"
+									><img src="images/pic06.jpg" alt=""
+								/></a>
+								<h3 class="major">Ante fermentum</h3>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur
+									adipiscing vehicula id nulla dignissim
+									dapibus ultrices.
+								</p>
+								<a href="#" class="special">Learn more</a>
+							</article>
+							<article>
+								<a href="#" class="image"
+									><img src="images/pic07.jpg" alt=""
+								/></a>
+								<h3 class="major">Fusce consequat</h3>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur
+									adipiscing vehicula id nulla dignissim
+									dapibus ultrices.
+								</p>
+								<a href="#" class="special">Learn more</a>
+							</article>
+						</section>
+						<ul class="actions">
+							<li><a href="#" class="button">Browse All</a></li>
+						</ul>
+					</div>
+				</section>
+			</section>
+
+			<!-- Footer -->
+			<section id="footer">
+				<div class="inner">
+					<h2 class="major">Get in touch</h2>
+					<p>
+						Cras mattis ante fermentum, malesuada neque vitae,
+						eleifend erat. Phasellus non pulvinar erat. Fusce
+						tincidunt, nisl eget mattis egestas, purus ipsum
+						consequat orci, sit amet lobortis lorem lacus in tellus.
+						Sed ac elementum arcu. Quisque placerat auctor laoreet.
+					</p>
+					<form method="post" action="#">
+						<div class="fields">
+							<div class="field">
+								<label for="name">Name</label>
+								<input type="text" name="name" id="name" />
+							</div>
+							<div class="field">
+								<label for="email">Email</label>
+								<input type="email" name="email" id="email" />
+							</div>
+							<div class="field">
+								<label for="message">Message</label>
+								<textarea
+									name="message"
+									id="message"
+									rows="4"
+								></textarea>
+							</div>
+						</div>
+						<ul class="actions">
+							<li>
+								<input type="submit" value="Send Message" />
+							</li>
+						</ul>
+					</form>
+					<ul class="contact">
+						<li class="icon solid fa-home">
+							Untitled Inc<br />
+							1234 Somewhere Road Suite #2894<br />
+							Nashville, TN 00000-0000
+						</li>
+						<li class="icon solid fa-phone">(000) 000-0000</li>
+						<li class="icon solid fa-envelope">
+							<a href="#">information@untitled.tld</a>
+						</li>
+						<li class="icon brands fa-twitter">
+							<a href="#">twitter.com/untitled-tld</a>
+						</li>
+						<li class="icon brands fa-facebook-f">
+							<a href="#">facebook.com/untitled-tld</a>
+						</li>
+						<li class="icon brands fa-instagram">
+							<a href="#">instagram.com/untitled-tld</a>
+						</li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Untitled Inc. All rights reserved.</li>
+						<li>
+							Design: <a href="http://html5up.net">HTML5 UP</a>
+						</li>
+					</ul>
+				</div>
+			</section>
+		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
