--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	need to add highlights to redirects
 -->
 <html>
 	<head>
@@ -76,7 +74,7 @@
 								own skillset while also incorporating newly developed AI tools
 								to help me succeed.
 							</p>
-							<a href="/GordanLiu.pdf" class="special">Resume</a>
+							<a href="/assets/GordanLiu.pdf" class="special">Resume</a>
 						</div>
 					</div>
 				</section>
@@ -106,14 +104,14 @@
 				<section id="three" class="wrapper spotlight style3">
 					<div class="inner">
 						<a href="#" class="image"
-							><img src="images/pic03.jpg" alt=""
+							><img src="images/hawaii.jpg" alt=""
 						/></a>
 						<div class="content">
-							<h2 class="major">Nullam dignissim</h2>
+							<h2 class="major">Social Network</h2>
 							<p>
-								
+								As an aspiring SWE, I would love to meet new people, so feel free to connect with me on LinkedIn below! You can also find my other socials at the bottom of the page <a href="#footer">here</a>.
 							</p>
-							<a href="#" class="special">Learn more</a>
+							<a id="linkedin" href="https://www.linkedin.com/in/gordan-liu-aa40a3253/" class="special">LinkedIn</a>
 						</div>
 					</div>
 				</section>
@@ -121,68 +119,35 @@
 				<!-- Four -->
 				<section id="four" class="wrapper alt style1">
 					<div class="inner">
-						<h2 class="major">Vitae phasellus</h2>
-						<p>
-							Cras mattis ante fermentum, malesuada neque vitae,
-							eleifend erat. Phasellus non pulvinar erat. Fusce
-							tincidunt, nisl eget mattis egestas, purus ipsum
-							consequat orci, sit amet lobortis lorem lacus in
-							tellus. Sed ac elementum arcu. Quisque placerat
-							auctor laoreet.
-						</p>
+						<h2 class="major">Projects and Other Works</h2>
+						<p><!-- description for projects --></p>
 						<section class="features">
 							<article>
-								<a href="#" class="image"
-									><img src="images/pic04.jpg" alt=""
+								<a class="image"
+									><img src="images/wordle_demo.png" alt=""
 								/></a>
-								<h3 class="major">Sed feugiat lorem</h3>
+								<h3 class="major">Wordle (Console-based)</h3>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur
-									adipiscing vehicula id nulla dignissim
-									dapibus ultrices.
+									A recreation of the Wordle game that gained popularity in 2021.
+									Written using Java 17 and playable through the console.
 								</p>
-								<a href="#" class="special">Learn more</a>
+								<a href="https://github.com/gordanliu/wordle-game-code" class="special">View Code</a>
 							</article>
 							<article>
-								<a href="#" class="image"
-									><img src="images/pic05.jpg" alt=""
+								<a class="image willycat"
+									><img src="images/willycat.png" alt=""
 								/></a>
-								<h3 class="major">Nisl placerat</h3>
+								<h3 class="major">HTML5 web games</h3>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur
-									adipiscing vehicula id nulla dignissim
-									dapibus ultrices.
+									Created several minigames as part of a bigger project during my time at <a href="https://www.afhboston.org/">Artists for Humanity</a>.
+									Linked below are the games I worked on. Written using Javascript's Phaser 3 library.
 								</p>
-								<a href="#" class="special">Learn more</a>
-							</article>
-							<article>
-								<a href="#" class="image"
-									><img src="images/pic06.jpg" alt=""
-								/></a>
-								<h3 class="major">Ante fermentum</h3>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur
-									adipiscing vehicula id nulla dignissim
-									dapibus ultrices.
-								</p>
-								<a href="#" class="special">Learn more</a>
-							</article>
-							<article>
-								<a href="#" class="image"
-									><img src="images/pic07.jpg" alt=""
-								/></a>
-								<h3 class="major">Fusce consequat</h3>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur
-									adipiscing vehicula id nulla dignissim
-									dapibus ultrices.
-								</p>
-								<a href="#" class="special">Learn more</a>
+								<a href="https://github.com/Artists-for-Humanity/Gameboy-Micro-Games/tree/main/src/scripts/MicroGamers" class="special">View Code</a>
 							</article>
 						</section>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Browse All</a></li>
-						</ul>
+						</ul> -->
 					</div>
 				</section>
 			</section>
@@ -190,13 +155,9 @@
 			<!-- Footer -->
 			<section id="footer">
 				<div class="inner">
-					<h2 class="major">Get in touch</h2>
+					<h2 class="major">Contact Me</h2>
 					<p>
-						Cras mattis ante fermentum, malesuada neque vitae,
-						eleifend erat. Phasellus non pulvinar erat. Fusce
-						tincidunt, nisl eget mattis egestas, purus ipsum
-						consequat orci, sit amet lobortis lorem lacus in tellus.
-						Sed ac elementum arcu. Quisque placerat auctor laoreet.
+						If you have any questions you can reach me directly through this form. You can also message me on <a href="#three">LinkedIn</a> as well! .
 					</p>
 					<form method="post" action="#">
 						<div class="fields">
@@ -224,12 +185,7 @@
 						</ul>
 					</form>
 					<ul class="contact">
-						<li class="icon solid fa-home">
-							Untitled Inc<br />
-							1234 Somewhere Road Suite #2894<br />
-							Nashville, TN 00000-0000
-						</li>
-						<li class="icon solid fa-phone">(000) 000-0000</li>
+						<!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
 						<li class="icon solid fa-envelope">
 							<a href="#">information@untitled.tld</a>
 						</li>
@@ -245,9 +201,6 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled Inc. All rights reserved.</li>
-						<li>
-							Design: <a href="http://html5up.net">HTML5 UP</a>
-						</li>
 					</ul>
 				</div>
 			</section>
