--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<div class="inner">
 					<h2>Menu</h2>
 					<ul class="links">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/">Home</a></li>
 					</ul>
 					<a href="#" class="close">Close</a>
 				</div>
@@ -49,9 +49,12 @@
 
 			<!-- Banner -->
 			<section id="banner">
-				<div class="inner">
-					<h1>Gordan Liu</h1>
-					<p>Student at UMass Amherst | SWE Fellow at <a href="https://www.linkedin.com/company/headstarterai/">Headstarter AI</a></p>
+				<div class="inner banner">
+					<img src="images/portrait.jpg" class="banner-image" alt="Gordan Liu">
+					<div class="banner-right">
+						<h1>Gordan Liu</h1>
+						<p>Student at UMass Amherst | SWE Fellow at <a href="https://www.linkedin.com/company/headstarterai/">Headstarter AI</a></p>
+					</div>
 				</div>
 			</section>
 
@@ -61,7 +64,7 @@
 				<section id="one" class="wrapper spotlight style1">
 					<div class="inner">
 						<a href="#" class="image"
-							><img src="images/portrait.jpg" alt=""
+							><img src="images/hawaii_me.jpg" alt=""
 						/></a>
 						<div class="content">
 							<h2 class="major">About Me</h2>
@@ -104,7 +107,7 @@
 				<section id="three" class="wrapper spotlight style3">
 					<div class="inner">
 						<a href="#" class="image"
-							><img src="images/hawaii.jpg" alt=""
+							><img src="images/hawaii_botanic_gardens.jpg" alt=""
 						/></a>
 						<div class="content">
 							<h2 class="major">Social Network</h2>
@@ -124,7 +127,7 @@
 						<section class="features">
 							<article>
 								<a class="image"
-									><img src="images/wordle_demo.png" alt=""
+									><img src="images/projects_wordle.png" alt=""
 								/></a>
 								<h3 class="major">Wordle (Console-based)</h3>
 								<p>
@@ -135,7 +138,7 @@
 							</article>
 							<article>
 								<a class="image willycat"
-									><img src="images/willycat.png" alt=""
+									><img src="images/projects_willycat.png" alt=""
 								/></a>
 								<h3 class="major">HTML5 web games</h3>
 								<p>
@@ -187,20 +190,27 @@
 					<ul class="contact">
 						<!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
 						<li class="icon solid fa-envelope">
-							<a href="#">information@untitled.tld</a>
-						</li>
-						<li class="icon brands fa-twitter">
-							<a href="#">twitter.com/untitled-tld</a>
-						</li>
-						<li class="icon brands fa-facebook-f">
-							<a href="#">facebook.com/untitled-tld</a>
+							<a href="">gordanliu@umass.edu</a>
 						</li>
 						<li class="icon brands fa-instagram">
-							<a href="#">instagram.com/untitled-tld</a>
+							<a href="https://www.instagram.com/gordan.liu">instagram.com/gordan.liu</a>
 						</li>
+						<li class="icon brands fa-twitch">
+							<a href="https://www.twitch.tv/kand33z">twitch.tv/kand33z</a>
+						</li>
+						<li class="icon brands fa-tiktok">
+							<a href="https://www.tiktok.com/@kand33z">tiktok.com/kand33z</a>
+						</li>
+						<li class="icon brands fa-github">
+							<a href="https://github.com/gordanliu/">github.com/gordan.liu</a>
+						</li>
+						<li class="icon brands fa-linkedin">
+							<a href="https://www.linkedin.com/in/gordan-liu-aa40a3253/">linkedin.com/gordan.liu</a>
+						</li>
+						
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled Inc. All rights reserved.</li>
+						<li>&copy; Gordan Liu Inc. All rights reserved.</li>
 					</ul>
 				</div>
 			</section>
