--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
 						<div class="content">
 							<h2 class="major">About Me</h2>
 							<p>
-								Hello, my name is Gordan Liu and I am a second-year student
-								at the University of Massachusetts Amherst majoring in 
-								Computer Science. In my free time, I like to play video 
-								games, hang out with friends, and learn random skills. I hope
-								to become a proficient software engineer through improving my
-								own skillset while also incorporating newly developed AI tools
-								to help me succeed.
+								My name is Gordan Liu, and I’m currently a second-year studying Computer Science at UMass
+								Amherst. Growing up, I was always fascinated by computers, spending countless hours playing
+								video games and exploring the web. This early interest has evolved into a passion for 
+								understanding the technologies and skills required to create those very experiences.
+								My goal is to become a proficient software engineer through improving my own skillset
+								while also incorporating new tools like AI to drive my success.
 							</p>
 							<a href="/assets/GordanLiu.pdf" class="special">Resume</a>
 						</div>
@@ -84,6 +83,27 @@
 
 				<!-- Two -->
 				<section id="two" class="wrapper alt spotlight style2">
+					<div class="inner">
+						<a href="#" class="image">
+							<img src="images/easya_logo.png" alt=""
+						/></a>
+						<div class="content">
+							<h2 class="major">EasyA x Polkadot 2024 Hackathon Winner</h2>
+							<p>
+								Participated in my first Hackathon at the EasyA x Polkadot Harvard Hackathon.
+								Despite having no prior experience with Web3, I dedicated over 24
+								hours to learning and experimenting with the Polkadot Blockchain network.
+								Our hard work paid off, as my team landed first place with PolkaQuest—an
+								innovative AR (augmented reality) geocaching game that combines outdoor
+								exploration with blockchain rewards.
+							</p>
+							<a id="linkedin" href="https://www.linkedin.com/in/gordan-liu-aa40a3253/" class="special">LinkedIn</a>
+						</div>
+					</div>
+				</section>
+
+				<!-- Three -->
+				<section id="three" class="wrapper spotlight style3">
 					<div class="inner">
 						<a href="#" class="image"
 							><img src="images/afh_logo.jpg" alt=""
@@ -97,24 +117,9 @@
 								prototypes for company clients. Notable projects include several HTML5 mini-games
 								created using Javascript and Phaser.js, and a console-based version of the
 								popular word game, <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a>, written in Java.
+								Skills learned include <br> Python, Java, HTML & CSS, Javascript, Typescript, and TailwindCSS.
 							</p>
 							<a href="https://github.com/gordanliu" class="special">GitHub</a>
-						</div>
-					</div>
-				</section>
-
-				<!-- Three -->
-				<section id="three" class="wrapper spotlight style3">
-					<div class="inner">
-						<a href="#" class="image"
-							><img src="images/hawaii_botanic_gardens.jpg" alt=""
-						/></a>
-						<div class="content">
-							<h2 class="major">Social Network</h2>
-							<p>
-								As an aspiring SWE, I would love to meet new people, so feel free to connect with me on LinkedIn below! You can also find my other socials at the bottom of the page <a href="#footer">here</a>.
-							</p>
-							<a id="linkedin" href="https://www.linkedin.com/in/gordan-liu-aa40a3253/" class="special">LinkedIn</a>
 						</div>
 					</div>
 				</section>
@@ -122,7 +127,7 @@
 				<!-- Four -->
 				<section id="four" class="wrapper alt style1">
 					<div class="inner">
-						<h2 class="major">Projects and Other Works</h2>
+						<h2 class="major">Projects, Achievements, and Other Works</h2>
 						<p><!-- description for projects --></p>
 						<section class="features">
 							<article>
@@ -193,19 +198,19 @@
 							<a href="">gordanliu@umass.edu</a>
 						</li>
 						<li class="icon brands fa-instagram">
-							<a href="https://www.instagram.com/gordan.liu">instagram.com/gordan.liu</a>
+							<a href="https://www.instagram.com/gordan.liu">Instagram</a>
 						</li>
 						<li class="icon brands fa-twitch">
-							<a href="https://www.twitch.tv/kand33z">twitch.tv/kand33z</a>
+							<a href="https://www.twitch.tv/kand33z">Twitch</a>
 						</li>
 						<li class="icon brands fa-tiktok">
-							<a href="https://www.tiktok.com/@kand33z">tiktok.com/kand33z</a>
+							<a href="https://www.tiktok.com/@kand33z">Tiktok</a>
 						</li>
 						<li class="icon brands fa-github">
-							<a href="https://github.com/gordanliu/">github.com/gordan.liu</a>
+							<a href="https://github.com/gordanliu/">GitHub</a>
 						</li>
 						<li class="icon brands fa-linkedin">
-							<a href="https://www.linkedin.com/in/gordan-liu-aa40a3253/">linkedin.com/gordan.liu</a>
+							<a href="https://www.linkedin.com/in/gordan-liu-aa40a3253/">LinkedIn</a>
 						</li>
 						
 					</ul>
